tests/requests/invalid/018.py
from gunicorn import InvalidHTTPVersion
request = InvalidHTTPVersion
